k8s/infra/kibana.yaml
# Kibana is an open-source data visualization tool designed to work with Elasticsearch. 
# Here it is used to visualize logs collected by logstash and stored in Elasticsearch.
# This YAML configures the deployment and service for Kibana in a Kubernetes cluster.

apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.6.2
          ports:
            - containerPort: 5601
