k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8080, https://www.leaf.monster, http://www.leaf.monster, https://auth.leaf.monster, http://auth.leaf.monster, https://profile.leaf.monster, http://profile.leaf.monster, https://admin.leaf.monster, http://admin.leaf.monster, https://chat.leaf.monster, http://chat.leaf.monster"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rate-limit: "1000"
    nginx.ingress.kubernetes.io/rate-limit-window: "15m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.leaf.monster
      secretName: leaf-monster-tls  # Ensure this is your cert-manager secret
  rules:
    - host: api.leaf.monster
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: leaf-chat-service
                port:
                  number: 2004
          # - path: /notification/socket.io
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: leaf-notification-service
          #       port:
          #         number: 2005
          - path: /api/v1/user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaf-user-service
                port:
                  number: 2001
          - path: /api/v1/post(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaf-post-service
                port:
                  number: 2002
          - path: /api/v1/feed(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaf-feed-service
                port:
                  number: 2003
          - path: /api/v1/chat(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaf-chat-service
                port:
                  number: 2004
          - path: /api/v1/notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaf-notification-service
                port:
                  number: 2005
